--- a/src/app/dashboard/collection/collection.component.html
+++ b/src/app/dashboard/collection/collection.component.html
@@ -1,3 +1,17 @@
 <div class="collection">
-
+<!--  <div class="collection__placeholder"></div>-->
+  <div class="container">
+    <div class="card" *ngFor="let item of dataSource">
+      <div class = "box">
+        <div class="content">
+          <h2>LeXa</h2>
+          <h3>{{item.name}}</h3>
+          <p>Birth year {{item.birth_year}}</p>
+          <p>Strength {{item.mass}}</p>
+          <a href="#">Use to deck</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
