--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,8 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 .html__container{
@@ -8,6 +10,7 @@
   flex-direction: row;
   height: 100%;
   width: 100%;
+  /*overflow: hidden;*/
 }
 
 .dashboard {
@@ -17,13 +20,18 @@
   justify-content: space-around;
   align-items: center;
   width: 200px;
-  height: 110%;
-  background-color: rgba(103, 84, 90, 0.5);
-  /*flex: 0 0 200px;*/
-  /*position: fixed;*/
-  /*left: 0;*/
-  /*top: 0;*/
+  height: 100%;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+  inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+  5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+  background: #181818;
 }
+
+.dashboard__logo{
+  width:100px;
+  height:50px;
+}
+
 .dashboard__li {
   width: 100%;
   height: 100px;
