--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="html__container">
   <ul class="dashboard">
+<!--    <img class="dashboard__logo" src="logo.png" alt="logo">-->
     <li *ngFor="let route of routes" (click)="navigateTo(route.path)" class="button-82-pushable">
       <span class="button-82-shadow"></span>
       <span class="button-82-edge"></span>
@@ -10,7 +11,4 @@
   </ul>
   <router-outlet></router-outlet>
 </div>
-<!-- HTML !-->
-<button class="button-82-pushable" role="button">
 
-</button>
