--- a/src/app/dashboard/battle/battle.component.html
+++ b/src/app/dashboard/battle/battle.component.html
@@ -1,1 +1,9 @@
-<p>battle works!</p>
+<div class="battle">
+  <div class="battle__container">
+    <div class="battle__container__content">
+      <h1>Battle</h1>
+      <h3>Sorry, but this feature of the site is other construction... Please follow us for following updates and be aware of new features!</h3>
+    </div>
+    <div class="flap"></div>
+  </div>
+</div>
