--- a/src/app/dashboard/collection/collection.component.html
+++ b/src/app/dashboard/collection/collection.component.html
@@ -8,7 +8,7 @@
           <h3>{{item.name}}</h3>
           <p>Birth year {{item.birth_year}}</p>
           <p>Strength {{item.mass}}</p>
-          <a href="#">Use to deck</a>
+          <a>Use to deck</a>
         </div>
       </div>
     </div>
