--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,18 +1,3 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-.html__container{
-  display:flex;
-  flex-direction: row;
-  height: 100%;
-  width: 100%;
-  /*overflow: hidden;*/
-}
-
 .dashboard {
   list-style-type: none;
   display: flex;
@@ -21,17 +6,12 @@
   align-items: center;
   width: 200px;
   height: 100%;
-  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
-  inset -5px -5px 15px rgba(255, 255, 255, 0.1),
-  5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-  background: #181818;
+  background-color: rgba(14, 14, 14, 0.94);
+  flex: 0 0 200px;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
-
-.dashboard__logo{
-  width:100px;
-  height:50px;
-}
-
 .dashboard__li {
   width: 100%;
   height: 100px;
@@ -46,12 +26,10 @@
 .dashboard__li:hover {
   background-color: rgba(192, 83, 108);
 }
-
-.content{
-  display:flex;
-  overflow: hidden;
+.container {
+  margin-left: 200px;
+  height: 100%;
 }
-
 .button-82-pushable {
   width: 75%;
   position: relative;
